maybe final commit both send recieve completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">speedometerkeshab</string>
+    <string name="title_activity_accel_reciever_view">AccelRecieverView</string>
 </resources>
